--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -8,11 +8,29 @@
       
       
  }
+ h4{
+     margin-left: 90px;
+ }
 
  h1 {
-     background-color: blue;
+     background-color:aqua;
+     margin-left: 90;
  }
  h2 {
-    color:red;
+    color:aqua;
     background-color: green;
 }
+
+
+table {
+    border-collapse: collapse;
+    width: 50%;
+  }
+  
+  th, td {
+    padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+  }
+  
+  tr:hover {background-color:#f5f5f5;}
