--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1,5 +1,3 @@
-
-
  .leftaside{
      height: 400px;
      width: 20%;
@@ -8,29 +6,45 @@
       
       
  }
- h4{
-     margin-left: 90px;
+  
+ .bottomDiv{
+     padding-left: 100px;
  }
-
- h1 {
-     background-color:aqua;
-     margin-left: 90;
+ .footerDiv{
+     height: 20vh;
+     background-color: teal;
  }
- h2 {
-    color:aqua;
-    background-color: green;
+ .card-img-top {
+    width: 100%;
+    height: 15vw;
+    object-fit: cover;
 }
+ .cardsDiv{
+   
+     margin-top: 50px;
+     padding-left: 130px;
+ }
+ #info{
+     position: relative;
+     left:65px;
+ }
 
-
+h1{
+    margin-left: 80px;
+}
 table {
     border-collapse: collapse;
-    width: 50%;
+    width: 80%;
+    padding-top: 30px;
+     
   }
   
   th, td {
     padding: 8px;
     text-align: left;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 2px solid #ddd;
+    height: 50px;
+    
   }
   
   tr:hover {background-color:#f5f5f5;}
