--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -3,9 +3,11 @@
      width: 20%;
      background-color: aqua;
      float: left;
-      
-      
+           
  }
+h4{
+  font-size: 10px;
+}
  div.sticky {
     position: -webkit-sticky;
     position: sticky;
@@ -58,11 +60,11 @@
  .cardsDiv{
    
      margin-top: 50px;
-     padding-left: 130px;
+      
  }
  #info{
      position: relative;
-     left:65px;
+     left:25px;
  }
 
 h1{
