--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1,4 +1,12 @@
- .leftaside{
+ 
+/* Header Style     */
+
+
+
+
+/* Header Style     */
+
+ #leftaside{
      height: 400px;
      width: 20%;
      background-color: aqua;
@@ -15,6 +23,7 @@ h4{
      
      
   }
+  
   .fa {
     padding: 20px;
     font-size: 30px;
@@ -52,10 +61,10 @@ h4{
 
           
     }
-    #newsLetter{
-      height: 170px;
+    .newsLetter{
+      height: 140px;
       width: 100%;
-      background-color:lightgoldenrodyellow ;
+      background-color:rgb(236, 236, 9) ;
     }
     .lisize{
       font-size: 16px;
@@ -160,28 +169,11 @@ table {
     display: none;
   }
   
-  @media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {display: none;}
-    .topnav a.icon {
-      float: right;
-      display: block;
-    }
-  }
+ .navbar{
+   background-color: rgb(219, 170, 7);
+ }
   
-  @media screen and (max-width: 600px) {
-    .topnav.responsive {position: relative;}
-    .topnav.responsive .icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
-  }
-
+  
   
   
   .parallax {
