--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1,10 +1,51 @@
  
-/* Header Style     */
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Lato:ital@1&family=Roboto+Mono:ital@1&display=swap');
+
+:root{
+  --dancing:"Dancing Script", cursive;
+}
 
 
 
 
 /* Header Style     */
+.navbar-brand{
+  font-family: var(--dancing);
+  font-size: 0.3em;
+}
+.nav-item{
+  padding-left: 30px;
+}
+
+
+
+/* Header Style     */
+/*-------------------------------------------------------------------*/
+
+/*---Main----*/
+
+.parallax {
+  /* The image used */
+  background-image: url('../Images/sydney.jpg');
+
+  /*  height */
+  min-height: 500px; 
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  /* background-position: 50% 50%; */
+  background-position: center;
+  background-repeat: no-repeat;
+ /* background-size: 100%; */
+  background-size: cover;
+  border-radius:20px;
+}
+@media only screen and (max-device-width: 1222px) {
+  .parallax {
+    background-attachment: scroll;
+  }
+}
+
 
  #leftaside{
      height: 400px;
@@ -22,6 +63,16 @@ h4{
     top:0;
      
      
+  }
+  #container-adv{
+    height: 15vh;
+    width: 50%;
+  background-color: burlywood;
+  margin-top: 10px;
+    
+  }
+  .cardsdiv{
+    margin-top: 50px;
   }
   
   .fa {
@@ -94,9 +145,7 @@ h4{
     
     }
   
- .bottomDiv{
-     padding-left: 130px;
- }
+ 
  .footerDiv{
      height: 20vh;
      background-color: teal;
@@ -106,11 +155,7 @@ h4{
     height: 15vw;
     object-fit: cover;
 }
- .cardsDiv{
-   
-     margin-top: 50px;
-      
- }
+  
  #info{
      position: relative;
      left:25px;
@@ -176,19 +221,7 @@ table {
   
   
   
-  .parallax {
-    /* The image used */
-    background-image: url('../Images/sydney.jpg');
-  
-    /* Full height */
-    min-height: 500px; 
-  
-    /* Create the parallax scrolling effect */
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
+ 
   
   /* Turn off parallax scrolling for tablets and phones. Increase the pixels if needed */
   
