--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -6,8 +6,6 @@
 }
 
 
-
-
 /* Header Style     */
 .navbar-brand{
   font-family: var(--dancing);
@@ -118,11 +116,7 @@ h4{
     .carousel-item img{
       height: 400px !important;
     }
-    .newsLetter{
-      height: 140px;
-      width: 100%;
-      background-color:rgb(236, 236, 9) ;
-    }
+   
     .lisize{
       font-size: 16px;
     }
@@ -142,8 +136,6 @@ h4{
   margin-top: 10px;
 }
 
-    
-  
  
  .footerDiv{
      height: 25vh;
@@ -217,8 +209,10 @@ table {
    background-color: rgb(219, 170, 7);
  }
   
-  
-  
+  /*Economy.html*/
+  .eco{
+    width: 100% !important;
+  }
   
  
   
