--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -15,19 +15,7 @@
 .nav-item{
   padding-left: 30px;
 }
-
-.bg {
-  /* The image used */
-  background-image: url("../Images/central-coast-1380302__480.jpg");
-
-  /* Full height */
-  height: 100%;
-
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
+ 
 
 /* Header Style     */
 /*-------------------------------------------------------------------*/
@@ -57,8 +45,8 @@
 }
 
 
- #leftaside{
-     height: 400px;
+ #awards{
+     height: 750px;
      width: 20%;
      background-color: aqua;
      float: left;
@@ -67,23 +55,8 @@
 h4{
   font-size: 10px;
 }
- div.sticky {
-    position: -webkit-sticky;
-    position: sticky;
-    top:0;
-     
-     
-  }
-  #container-adv{
-    height: 15vh;
-    width: 50%;
-  background-color: burlywood;
-  margin-top: 10px;
-    
-  }
-  .cardsdiv{
-    margin-top: 50px;
-  }
+ 
+  
   
   .fa {
     padding: 20px;
@@ -121,42 +94,21 @@ h4{
     .lisize{
       font-size: 16px;
     }
-    #regionHeader{
-      position: -webkit-sticky;
-      position: sticky;
-      top: 0;
-
-    }
-    #sectionDiv{
-      width:100%;
-      height: 400px;
+    
      
-
-    }
-.lia{
-  margin-top: 10px;
-}
+ 
 
  
- .footerDiv{
-     height: 25vh;
-     background-color: teal;
- }
- .card-img-top {
-    width: 100%;
-    height: 15vw;
-    object-fit: cover;
-}
+ 
+ 
   
- #info{
+ #key-facts{
      position: relative;
      left:25px;
  }
 
-h1{
-    margin-left: 80px;
-}
-table {
+ 
+.table-languages {
     border-collapse: collapse;
     width: 80%;
     padding-top: 30px;
@@ -172,48 +124,13 @@ table {
   }
   
   tr:hover {background-color:#f5f5f5;}
-
-  .topnav {
-    overflow: hidden;
-    background-color:green;
-    
-  
-  }
-  
-  .topnav a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    
-  }
-  
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  .topnav a.active {
-    background-color: #4CAF50;
-    color: white;
-    border-radius: 10px;
-  }
-  
-  .topnav .icon {
-    display: none;
-  }
+ 
   
  .navbar{
    background-color: rgb(219, 170, 7);
  }
   
-  /*Economy.html*/
-  .eco{
-    width: 100% !important;
-  }
+ 
   
  
   
