--- a/CSS/regions.css
+++ b/CSS/regions.css
@@ -24,14 +24,14 @@
 
 /*-------/Carousel----------------- */
 /*---------Regions------------------*/
-#panel, #flip {
+.panel, .flip {
   padding: 5px;
   text-align: center;
   background-color: #e5eecc;
   border: solid 1px #c3c3c3;
 }
 
-#panel {
+.panel {
   padding: 50px;
   display: none;
 }
